OSS-Fuzz: Add new fuzzer upstream
Signed-off-by: Arthur Chan <arthur.chan@adalogics.com>

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -23,5 +23,11 @@ path = "fuzz_targets/streaming.rs"
 test = false
 doc = false
 
+[[bin]]
+name = "process"
+path = "fuzz_targets/process.rs"
+test = false
+doc = false
+
 # Work around https://github.com/rust-lang/cargo/issues/8338
 [workspace]
